plugins {
    id 'fabric-loom' version '1.8-SNAPSHOT'
    id 'maven-publish'
}

version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

loom {
    accessWidenerPath = file("src/main/resources/danse.accesswidener")
}

repositories {
    maven { url "https://maven.tomalbrc.de" }
    maven { url 'https://maven.nucleoid.xyz' }
    mavenLocal()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation "eu.pb4:polymer-resource-pack:${project.polymer_version}"
    modImplementation "eu.pb4:polymer-resource-pack-extras:${project.polymer_version}"
    modImplementation "eu.pb4:polymer-core:${project.polymer_version}"
    modImplementation "eu.pb4:polymer-virtual-entity:${project.polymer_version}"
    modRuntimeOnly "eu.pb4:polymer-autohost:${project.polymer_version}"

    modImplementation include("de.tomalbrc:blockbench-import-library:${project.bil_version}")
}

processResources {
    inputs.property "version", rootProject.version
    inputs.property "minecraft_version", rootProject.minecraft_version
    inputs.property "loader_version", rootProject.loader_version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": rootProject.version,
                "minecraft_version": rootProject.minecraft_version,
                "loader_version": rootProject.loader_version
    }
}

jar {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}


tasks.withType(JavaCompile).configureEach {
    it.options.release.set(21)
}

java {
    withSourcesJar()
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
